--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Static Forum - Newest Entries</title>
+    <title>GreenyForum - Posts/title>
+        <h1>
+            <href=""
+            <span style="color: green;">Greeny</span><span style="color: black;">Forum</span>
+          </h1>
+          <h3>Posts/h3>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -65,6 +70,6 @@
             });
         }
     </script>
-
+    <h3>@Copyright Suite Software</h3>
 </body>
 </html>
